--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,7 @@ body {
 }
 
 header {
-	background: #0a4cba;
+	background: white;
 	position: sticky;
 	top: -70px;
 }
@@ -47,15 +47,15 @@ header, header div, nav{
 #research a {
     position: relative;
 	text-decoration: none;
-	color: white;
+	color: #FE7700;
 	font-family: 'poppins';
 	font-size: 30px;
 	margin: auto 0;
     justify-content: center;
 	margin-left: -2.5%;
 	margin-right: 5%;
-	border-top: 2px solid white;
-	border-bottom: 2px solid white;
+	border-top: 2px solid #FE7700;
+	border-bottom: 2px solid #FE7700;
 }
 
 #research input[type="text"] {
@@ -66,6 +66,8 @@ header, header div, nav{
     height: 35px;
 	width: 600px;
     margin: auto;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: #EEEEEE;
 }
 
 #research input[type="image"] {
@@ -73,7 +75,7 @@ header, header div, nav{
 	width: 50px;
 	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
-	background: white;
+	background: #FE7700;
     height: 45px;
     margin: auto;
 }
@@ -81,7 +83,7 @@ header, header div, nav{
 nav {
 	padding: 0;
 	display: flex;
-	background: white;
+	background: #FE7700;
 }
 
 nav ul {
@@ -96,15 +98,15 @@ nav a {
 	text-decoration: none;
 	font-family: 'poppins';
 	font-size: 16px;
-	color: #0a4cba;
+	color: white;
 	margin: 0;
 	padding: 10px 15px;
 	transition: 0.15s;
 }
 
 nav a:hover {
-	background: #0a4cba;
-	color: white;
+	background: white;
+	color: #FE7700;
 }
 
 nav li {
