--- a/css/header.css
+++ b/css/header.css
@@ -39,23 +39,10 @@ header, header div, nav{
 #research {
 	padding: 15px 0;
 	display: flex;
+    flex-direction: row;
 	width: 700px;
 	margin: auto;
     height: 50px;
-}
-
-#research a {
-    position: relative;
-	text-decoration: none;
-	color: #FE7700;
-	font-family: 'poppins';
-	font-size: 30px;
-	margin: auto 0;
-    justify-content: center;
-	margin-left: -2.5%;
-	margin-right: 5%;
-	border-top: 2px solid #FE7700;
-	border-bottom: 2px solid #FE7700;
 }
 
 #research input[type="text"] {
@@ -64,7 +51,7 @@ header, header div, nav{
 	border-bottom-left-radius: 20px;
 	padding: 5px 20px;
     height: 35px;
-	width: 600px;
+	min-width: 400px;
     margin: auto;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     background: #EEEEEE;
@@ -78,6 +65,50 @@ header, header div, nav{
 	background: #FE7700;
     height: 45px;
     margin: auto;
+    margin-right: 100px;
+}
+
+#title {
+    position: relative;
+	text-decoration: none;
+	color: #FE7700;
+	font-family: 'poppins';
+	font-size: 30px;
+	margin: auto 0;
+    justify-content: center;
+	margin-left: -2.5%;
+	margin-right: 5%;
+	border-top: 2px solid #FE7700;
+	border-bottom: 2px solid #FE7700;
+}
+
+.template_icone {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: -80px;
+    margin-top: -5px;
+}
+
+.right_header {
+    width: 150px;
+    text-decoration: none;
+    font-family: 'poppins';
+    font-size: 14px;
+    color: #FE7700;
+}
+
+#panier {
+    width: 50px;
+    height: 40px;
+    align-self: center;
+}
+
+#connexion {
+    width: 40px;
+    height: 40px;
+    align-self: center;
 }
 
 nav {
