--- a/css/header.css
+++ b/css/header.css
@@ -51,7 +51,7 @@ header, header div, nav{
 	border-bottom-left-radius: 20px;
 	padding: 5px 20px;
     height: 35px;
-	min-width: 400px;
+	min-width: 470px;
     margin: auto;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     background: #EEEEEE;
@@ -65,7 +65,7 @@ header, header div, nav{
 	background: #FE7700;
     height: 45px;
     margin: auto;
-    margin-right: 70px;
+    margin-right: 10%;
 }
 
 #title {
@@ -83,31 +83,32 @@ header, header div, nav{
 }
 
 .template_icone {
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    margin-left: 50px;
-    margin-right: -80px;
-    margin-top: -10px;
+    margin: auto;
+    margin-top: -5px;
+    margin-left: 20px;
+    margin-right: 30px;
 }
 
 .right_header {
-    width: 150px;
+    width: 100px;
     text-decoration: none;
-    font-family: 'poppins';
-    font-size: 14px;
-    color: #333333;
+    font-family: 'poppins-light';
+    font-size: 13px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
 }
 
 #panier {
-    width: 60px;
-    height: 50px;
+    width: 55px;
+    height: 45px;
     align-self: center;
 }
 
 #connexion {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     align-self: center;
 }
 
