--- a/css/audiovisuel.css
+++ b/css/audiovisuel.css
@@ -81,11 +81,11 @@ span {
 }
 
 #range::-moz-range-thumb {
-    border: 1px solid #ddd;
-    width: 1.4rem;
-    height: 1.4rem;
+    border: 2px solid #FE7700;
+    width: 1.7rem;
+    height: 1.7rem;
     border-radius: 50%;
-    box-shadow: 0 0 .125rem #aaa
+    background: white;
 }
 
 #range::-moz-range-track {
