--- a/css/detail.css
+++ b/css/detail.css
@@ -60,7 +60,7 @@ body {
     text-align: center;
     background: #d9eef4;
     border-radius: 30px;
-    padding: 30px 30px;
+    padding: 30px;
 }
 
 #lien a {
