--- a/css/header.css
+++ b/css/header.css
@@ -87,7 +87,7 @@ header, header div, nav{
     margin: auto;
     margin-top: -5px;
     margin-left: 10px;
-    margin-right: 10px
+    margin-right: 10px;
 }
 
 .right_header {
