--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,35 @@ figure img {
 	float: left;
 }
 
+#overlay {
+    margin-top: -420px;
+    margin-bottom: 20px;
+	width: 100%;
+	height: 400px;
+	display: flex;
+	flex-direction: column;
+}
+
+#overlay h1, h2 {
+	margin-top: 130px;
+	color: white;
+	font-family: 'poppins';
+	font-size: 45px;
+	text-align: center;
+	margin-bottom: 0;
+}
+
+#overlay h2 {
+	margin-top: 0;
+	font-size: 28px;
+	color: #CCCCCC;
+}
+
 #promotions {
 	width: 100%;
 }
 
-h2 {
+.trend_container h2 {
 	font-size: 24px;
 	text-align: center;
 	margin-top: 20px;
