--- a/css/Connexion.css
+++ b/css/Connexion.css
@@ -11,6 +11,14 @@
     font-weight: normal;
     font-style: normal;
 }
+
+body {
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	width: 100%;
+}
+
 #Encadrer{
     font-family: 'Poppins';
     display: flex;
