--- a/css/Inscription.css
+++ b/css/Inscription.css
@@ -11,6 +11,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+form {
+    margin: 80px 0;
+}
+
 #Encadrer {
     font-family: 'Poppins';
     display: flex;
@@ -21,6 +26,7 @@
     transform: translate(-50%);
     margin-top: -35px;
 }
+
 legend {
     position: relative;
     background-color: white;
@@ -31,6 +37,7 @@ legend {
     font-size: 30px;
     z-index: 0;
 }
+
 fieldset {
     font-family: 'Poppins';
     border-radius: 15px;
@@ -43,10 +50,12 @@ fieldset {
     border-style: solid;
 
 }
+
 fieldset #para{
     margin-top: 45px;
     width: 300px;
 }
+
 #Encadrer input{
     border: none;
     border-bottom: 2px solid;
@@ -74,6 +83,7 @@ fieldset #Sub{
     transition: 0.25s;
     border-radius: 15px;
 }
+
 fieldset #Sub:hover{
     font-family: 'poppins';
     font-size: 20px;
@@ -106,6 +116,7 @@ fieldset #Sub:hover{
     border-color: gold;
     transition: 0.15s;
 }
+
 #con{
     display: flex;
     color: red;
@@ -113,16 +124,13 @@ fieldset #Sub:hover{
     margin-top: 15px;
     cursor: pointer;
 }
+
 p {
 	display: none;
 	color: red;
 	font-family: 'Poppins-light';
 	text-align: center;
 	font-size: 17px;
-    margin-top: 0px;
-    margin-bottom: -20px;
-}
-
-#inscription {
-    margin-top: 50px;
+  margin-top: 0px;
+  margin-bottom: -20px;
 }
