--- a/css/header.css
+++ b/css/header.css
@@ -29,22 +29,29 @@ body {
 header {
 	background: white;
 	position: sticky;
-    top: -80px;
-    z-index: 1000;
-    height: 100px;
+  top: -80px;
+  z-index: 1000;
+  height: 100px;
 }
 
 header, header div, nav{
 	width: 100%;
 }
 
+#title-admin {
+  text-align: center;
+  margin: auto;
+  font-family: sans-serif;
+	color: #FE7700;
+}
+
 #research {
 	padding: 15px 0;
 	display: flex;
-    flex-direction: row;
+  flex-direction: row;
 	width: 700px;
 	margin: auto;
-    height: 50px;
+  height: 50px;
 }
 
 #research input[type="text"] {
@@ -52,11 +59,11 @@ header, header div, nav{
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
 	padding: 5px 20px;
-    height: 35px;
+  height: 35px;
 	min-width: 470px;
-    margin: auto;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-    background: #EEEEEE;
+  margin: auto;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: #EEEEEE;
 }
 
 #research input[type="image"] {
@@ -65,19 +72,19 @@ header, header div, nav{
 	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
 	background: #FE7700;
-    height: 45px;
-    margin: auto;
-    margin-right: 15%;
+  height: 45px;
+  margin: auto;
+  margin-right: 15%;
 }
 
 #title {
-    position: relative;
+  position: relative;
 	text-decoration: none;
 	color: #FE7700;
 	font-family: 'poppins';
 	font-size: 30px;
 	margin: auto 0;
-    justify-content: center;
+  justify-content: center;
 	margin-left: -2.5%;
 	margin-right: 5%;
 	border-top: 2px solid #FE7700;
