--- a/css/ajouter_produit.css
+++ b/css/ajouter_produit.css
@@ -3,23 +3,15 @@ body {
   margin: 0;
 }
 
-main {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: auto;
-  justify-content: center;
-  margin-top: 60px;
-}
-
 .produit {
   display: flex;
   flex-direction: column;
-  margin: 20px 40px;
+  margin: auto;
   width: fit-content;
   background: #F5F5F5;
   padding: 20px;
   border-radius: 10px;
+  margin-top: 100px;
 }
 
 .produit label {
@@ -27,9 +19,13 @@ main {
   font-family: sans-serif;
 }
 
-.produit input {
+.produit input, select {
   float: right;
   margin: 0 10px;
+}
+
+select {
+  padding: 2px; 
 }
 
 .submit {
@@ -45,16 +41,14 @@ main {
   border-radius: 5px;
 }
 
-.modifier {
+#valider {
   background: #007BFF;
   color: white;
   border: none;
   cursor: pointer;
-}
-
-.supprimer {
-  background: red;
-  color: white;
-  border: none;
-  cursor: pointer;
+  padding: 10px 0;
+  border-radius: 10px;
+  width: 50%;
+  margin: auto;
+  margin-top: 15px;
 }
