--- a/css/ajouter_produit.css
+++ b/css/ajouter_produit.css
@@ -61,3 +61,12 @@ input[type="file"] {
   padding: 0 8px;
   cursor: pointer;
 }
+
+span {
+  margin-left: 116px;
+  width: fit-content;
+  color: red;
+  font-family: sans-serif;
+  font-size: 14px;
+  display: none;
+}
