--- a/css/mon_compte.css
+++ b/css/mon_compte.css
@@ -25,6 +25,7 @@
   text-align: center;
   /*position: absolute; left: 50%; transform: translate(-50%);*/
 }
+
 .hr::before{
       /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
       /*border-top: .0625em solid;*/
@@ -41,6 +42,7 @@
       margin: 0 .9em;
       margin-left: 25%;
 }
+
 .hr::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
     /*border-top: .0625em solid;*/
@@ -57,153 +59,45 @@
     margin: 0 .9em;
     margin-right: 25%;
 }
+
 #user_infos {
   font-family: 'Poppins';
   width: 30%;
   margin: auto;
-  margin-top: 3%;
-}
-#nom {
-  border-style: solid;
-  border-color: black;
-  border-radius: 4px;
-  height: 24px;
-  width: 100%;
-  transition: 0.2s;
-}
-#nom:hover {
-  border-style: solid;
-  border-color: orange;
-}
-#erreur_nom {
-  margin-top: 0%;
-  margin-bottom: auto;
-  margin-left: 3px;
-  display: none;
-  color: red;
-}
-#prenom {
-  border-style: solid;
-  border-color: black;
-  border-radius: 4px;
-  margin-top: 20px;
-  height: 24px;
-  width: 100%;
-  transition: 0.2s;
+  margin-top: 10px;
 }
 
-#nom_utilisateur {
-  border-style: solid;
-  border-color: black;
-  border-radius: 4px;
-  height: 24px;  
-  margin-top: 20px;
-  width: 100%;
-  transition: 0.2s;
+#user_infos label {
+  font-size: 13px;
+  font-family: sans-serif;
+  font-weight: 600;
 }
 
-#prenom:hover {
-  border-style: solid;
-  border-color: orange;
+#user_infos input {
+  border: solid black 1px;
   border-radius: 4px;
+  width: 100%;
+  margin-bottom: 12px;
+  padding: 7px;
 }
-#erreur_prenom {
+
+#user_infos p {
   margin-top: 0%;
   margin-bottom: auto;
   margin-left: 3px;
   display: none;
   color: red;
 }
-#motdepasse {
-  border-style: solid;
-  border-color: black;
-  border-radius: 4px;
-  margin-top: 20px;
-  width: 100%;
-  height: 24px;
-  transition: 0.2s;
-}
-#motdepasse:hover {
-  border-style: solid;
-  border-color: orange;
-  border-radius: 4px;
-  margin-top: 20px;
-  height: 24px;
-}
-#erreur_mdp {
-  margin-top: 0%;
-  margin-bottom: auto;
-  margin-left: 3px;
-  display: none;
-  color: red;
-}
-#Conf_motdepasse{
-  border-style: solid;
-  border-color: black;
-  border-radius: 4px;
-  margin-top: 20px;
-  width: 100%;
-  height: 24px;
-  transition: 0.2s;
-}
-#Conf_motdepasse:hover {
-  border-style: solid;
-  border-color: orange;
-  border-radius: 4px;
-}
-#erreur_confmdp {
-  margin-top: 0%;
-  margin-left: 3px;
-  display: none;
-  color: red;
-}
-#mail {
-  border-style: solid;
-  border-color: black;
-  margin-top: 20px;
-  height: 24px;
-  border-radius: 3px;
-  width: 100%;
-  transition: 0.2s;
-}
-#mail:hover {
-  border-style: solid;
-  border-color: orange;
-  margin-top: 20px;
-  height: 24px;
-  border-radius: 3px;
-}
-#erreur_mail{
-  margin-top: 0%;
-  margin-bottom: auto;
-  margin-left: 3px;
-  display: none;
-  color: red;
-}
-#submit{
-  border-style: solid;
-  border-color: black;
-  margin-top: 20px;
-  display: flex;
-  height: 30px;
-  border-radius: 3px;
-  margin-left: 50%;
-  transform: translate(-50%);
-  background-color: white;
+
+#user_infos input[type="submit"] {
+  display: block;
+  font-family: 'Poppins';
+  width: fit-content;
   cursor: pointer;
-  transition: 0.3s;
-}
-#submit:hover{
-  border-style: solid;
-  border-color: black;
-  margin-top: 20px;
-  display: flex;
-  height: 30px;
-  border-radius: 3px;
-  margin-left: 50%;
-  transform: translate(-50%);
-  background-color: black;
   color: white;
-  cursor: pointer;
-  transition: 0.3s;
+  border: none;
+  background: #00C7FF;
+  padding: 7px 14px;
+  font-size: 13px;
+  margin: 10px auto;
 }
