--- a/css/paiement.css
+++ b/css/paiement.css
@@ -55,8 +55,8 @@ body {
   background: green;
   color: white;
   border: none;
-  padding: 7px;
-  font-size: 18px;
+  padding: 8px 0;
+  font-size: 16px;
   font-family: 'Poppins';
   font-weight: 500;
   border-radius: 10px;
